Corrected the alignment issue in the About-us section

--- a/style.css
+++ b/style.css
@@ -120,6 +120,10 @@
 #about{
     height: 85vh;
 }
+.about-content{
+    height: 50vh;
+    overflow: auto;
+}
 .about-img img{
     position: absolute;
     left: 50%;
@@ -131,17 +135,17 @@
 
 @media screen and (max-width:768px) {
     #about{
-        height: 100%;
+        /* height: 100%; */
     }
     .about-content{
-        height: 50vh;
+        height: 35vh;
         overflow: auto;
     }
     .about-img img{
-        width: 80%;
-        height: 50vh;
-        left: 10%;
-        top: 0;
+        margin-top: 5%;
+        width: 50%;
+        height: 30vh;
+        left: 25%;
         transform: none;
     }
 }
